git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@419039 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/wpaccess_style.css
+++ b/css/wpaccess_style.css
@@ -23,7 +23,7 @@
     cursor: pointer;
 }
 
-#dialog-delete-confirm{
+.dialog{
     display:none;
 }
 
@@ -123,7 +123,7 @@
 
 .tooltip {
 	display:none;
-	background:url(tooltip/black_arrow_big.png);
+	background:url(tooltip/black_big.png);
 	height:163px;
 	padding:25px 30px 10px 30px;
 	width:310px;
