--- a/templates/admin_options.html
+++ b/templates/admin_options.html
@@ -131,7 +131,7 @@
                             </div>
                             <!-- ###CAPABILITY_ITEM### end-->
                             <br class="clear" />
-                            
+
                             <div class="default-roles">
                                 <div id="radio-list">
                                     <input type="radio" id="radio1" name="radio" onclick="changeCapabilities('radio1');" /><label for="radio1" title="Give Administrator's List of Capabilities">Administrator</label>
@@ -178,7 +178,7 @@
                                 </div>
                                 <div id="major-publishing-actions">
                                     <div id="delete-action">
-                                        <a class="submitdelete deletion" href="#" title="Restore Default Setting for Current Role">Restore Role</a>
+                                        <a class="submitdelete deletion" href="javascript:void(0);" title="Restore Default Setting for Current Role">Restore Role</a>
                                     </div>
                                     <div id="publishing-action">
                                         <img src="###site_url###/wp-admin/images/wpspin_light.gif" style="display:none;" id="ajax-loading" alt="Saving...">
@@ -245,7 +245,20 @@
                         </div>
                     </div>
                     ###metabox_general_info###
-                    ###metabox_support###
+                    <div id="metabox-support" class="postbox">
+                        <div class="handlediv" title="Click to toggle"><br /></div>
+                        <h3 class="hndle"><span>Support</span></h3>
+                        <div class="inside">
+                            <div class="sexy-bookmarks">
+                                <ul class="socials">
+                                    <li class="sexy-mail"><a href="mailto:admin@whimba.com" title="Send an Email">admin@whimba.com</a></li>
+                                    <li class="sexy-facebook"><a href="http://www.facebook.com/pages/Whimba/113734005389430" target="_blank" title="Find on Facebook Page">Whimba.com</a></li>
+                                    <li class="sexy-twitter"><a href="http://www.twitter.com/whimba" target="_blank" title="Follow on Twitter">Whimba</a></li>
+                                </ul>
+                            </div>
+                            <br class="clear" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
