git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@420200 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templates/admin_options.html
+++ b/templates/admin_options.html
@@ -22,7 +22,7 @@
                         <ul>
                             <li><a href="#tabs-1">Main Menu</a></li>
 
-                            <li><a href="#tabs-2">Metaboxes</a></li>
+                            <li><a href="#tabs-2">Metaboxes & Widgets</a></li>
                             <li><a href="#tabs-3">Capabilities</a></li>
                         </ul>
                         <div id="tabs-1">
@@ -195,7 +195,7 @@
                         <div class="inside" style="width:100%; margin: 0px; padding: 0px;">
                             <div id="role-tabs" >
                                 <ul>
-                                    <li><a href="#role_tab-1">Edit</a></li>
+                                    <li><a href="#role_tab-1">List</a></li>
                                     <li><a href="#role_tab-2">Add New</a></li>
                                 </ul>
                                 <div id="role_tab-1">
