--- a/templates/admin_options.html
+++ b/templates/admin_options.html
@@ -11,6 +11,7 @@
                 </div>
             </div>
         </div>
+        <br class="clear" />
         ###nonce###
         <input type="hidden" name="submited" value="1" />
         <input type="hidden" name="current_role" id="current_role" value="###current_role_id###" />
@@ -57,12 +58,12 @@
                             <div id="initiate-message">
                                 <p>To initiate list of metaboxes manually, copy and paste the URL to admin page on this site into text field and click "Initiate URL". List of all new metaboxes will be added automatically.</p>
                                 <div style="float:left; width:80%;">
-                                    <div class="initiate-url-empty">Enter correct URL here</div>
+                                    <div class="initiate-url-empty">Enter Correct URL</div>
                                     <input type="text" id="initiateURL" class="initiate-url-text" value="" />&nbsp;&nbsp;
-                                    <a href="javascript:void(0);" class="button initiate-url" >Initiate URL</a>
+                                    <a href="#" class="button initiate-url" >Initiate URL</a>
                                 </div>
                                 <div style="float:right;margin-top:8px;">
-                                    <a href="javascript:void(0);" class="initiate-metaboxes button" >Refresh List</a>
+                                    <a href="#" class="initiate-metaboxes button" >Refresh List</a>
                                 </div>
                                 <br class="clear" />
                             </div>
@@ -70,15 +71,12 @@
                             <!-- ###METABOX_LIST### begin-->
                             <div id="metabox-list">
                                 <!-- ###METABOX_LIST_ITEM### begin-->
-                                <div class="ui-tabs ui-widget ui-widget-content ui-corner-all metaboxlist-holder">
-                                    <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
-                                        <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="javascript:void(0);">###post_type_label###</a></li>
-                                    </ul>
-                                    <div class="ui-tabs-panel ui-widget-content ui-corner-bottom" >
+                                <div>
+                                   <h4><a href="#" >###post_type_label###</a></h4>
+                                   <div>
                                         <!-- ###POST_METABOXES_LIST### begin-->    
                                         <!-- ###POST_METABOXES_ITEM### begin-->    
                                         <div class="postbox metabox-item" >
-
                                             <h3 style="cursor: default;"><span>###title###</span></h3>
                                             <div class="inside">
                                                 <table class="metabox-description">
@@ -103,19 +101,20 @@
                                                 </table>
                                             </div>
                                         </div>
-                                        <div class="metabox-seperator">&nbsp;</div>
+                                        
                                         <!-- ###POST_METABOXES_ITEM### end--> 
                                         <!-- ###POST_METABOXES_LIST### end--> 
-                                        <br class="clear" />
-                                    </div>
-
+                                   </div>
                                 </div>
+                                <!--
+                                
+                        -->
                                 <!-- ###METABOX_LIST_ITEM### end-->
                                 <!-- ###METABOX_LIST_EMPTY### begin-->
                                 <div class="ui-widget">
                                     <div class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;"> 
                                         <p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-                                            <span style="color:#D54E21;">List of Metaboxes is empty or not initialized. <a href="javascript:void(0);" class="initiate-metaboxes" >Initiate the List</a></span></p>
+                                            <span style="color:#D54E21;">List of Metaboxes is empty or not initialized. <a href="#" class="initiate-metaboxes" >Initiate the List</a></span></p>
                                     </div>
                                 </div>
                                 <!-- ###METABOX_LIST_EMPTY### end-->
@@ -126,20 +125,20 @@
                             <!-- ###CAPABILITY_LIST### begin-->
                             <!-- ###CAPABILITY_ITEM### begin-->
                             <div class="capability-item">
-                                <input type="checkbox" name="wpaccess[###role###][advance][###title###]" value="1" ###checked### />
-                                       &nbsp;&nbsp;<label title="###description###">###cap_name###</label>
+                                <input type="checkbox" id="cap-###title###" name="wpaccess[###role###][advance][###title###]" value="1" ###checked### />
+                                       &nbsp;&nbsp;<label for="cap-###title###">###cap_name###</label>&nbsp;&nbsp;<span title="###description###" class="info">?</span>
                             </div>
                             <!-- ###CAPABILITY_ITEM### end-->
                             <br class="clear" />
 
                             <div class="default-roles">
                                 <div id="radio-list">
-                                    <input type="radio" id="radio1" name="radio" onclick="changeCapabilities('radio1');" /><label for="radio1" title="Give Administrator's List of Capabilities">Administrator</label>
-                                    <input type="radio" id="radio2" name="radio" onclick="changeCapabilities('radio2');" /><label for="radio2" title="Give Editor's List of Capabilities">Editor</label>
-                                    <input type="radio" id="radio3" name="radio" onclick="changeCapabilities('radio3');" /><label for="radio3" title="Give Author's List of Capabilities">Author</label>
-                                    <input type="radio" id="radio4" name="radio" onclick="changeCapabilities('radio4');" /><label for="radio4" title="Give Contributor's List of Capabilities">Contributor</label>
-                                    <input type="radio" id="radio5" name="radio" onclick="changeCapabilities('radio5');" /><label for="radio5" title="Give Subscriber's List of Capabilities">Subscriber</label>
-                                    <input type="radio" id="radio6" name="radio" onclick="changeCapabilities('radio6');" /><label for="radio6" title="Clear all Capabilities">Clear All</label>
+                                    <input type="radio" id="radio1" name="radio" onclick="mObj.changeCapabilities('radio1');" /><label for="radio1" title="Give Administrator's List of Capabilities">Administrator</label>
+                                    <input type="radio" id="radio2" name="radio" onclick="mObj.changeCapabilities('radio2');" /><label for="radio2" title="Give Editor's List of Capabilities">Editor</label>
+                                    <input type="radio" id="radio3" name="radio" onclick="mObj.changeCapabilities('radio3');" /><label for="radio3" title="Give Author's List of Capabilities">Author</label>
+                                    <input type="radio" id="radio4" name="radio" onclick="mObj.changeCapabilities('radio4');" /><label for="radio4" title="Give Contributor's List of Capabilities">Contributor</label>
+                                    <input type="radio" id="radio5" name="radio" onclick="mObj.changeCapabilities('radio5');" /><label for="radio5" title="Give Subscriber's List of Capabilities">Subscriber</label>
+                                    <input type="radio" id="radio6" name="radio" onclick="mObj.changeCapabilities('radio6');" /><label for="radio6" title="Clear all Capabilities">Clear All</label>
                                 </div>
                             </div>
                             <br class="clear" />
@@ -156,13 +155,13 @@
                     <div id="submitdiv" class="postbox">
                         <div class="handlediv" title="Click to toggle"><br /></div>
                         <h3 class="hndle"><span>General</span></h3>
-                        <div class="">
+                        <div class="inside">
                             <div class="submitbox" id="submitpost">
                                 <div id="minor-publishing">
                                     <div id="misc-publishing-actions">
                                         <div class="misc-role-section"><label for="current_role">Current Role:</label>
                                             <span id="current-role-display">###current_role###</span>
-                                            <a href="javascript:void(0);" class="change-role hide-if-no-js" tabindex="4">Change</a>
+                                            <a href="#" class="change-role hide-if-no-js" tabindex="4">Change</a>
 
                                             <div id="role-select" class="hide-if-js">
                                                 <select name="role" id="role" tabindex="4">
@@ -170,19 +169,19 @@
                                                     <option value="###value###" ###selected### >###title###</option>
                                                     <!-- ###ROLE_LIST### end-->
                                                 </select>
-                                                <a href="javascript:void(0);" class="hide-if-no-js button" id="role-ok">OK</a>
-                                                <a href="javascript:void(0);" class="hide-if-no-js" id="role-cancel">Cancel</a>
+                                                <a href="#" class="hide-if-no-js button" id="role-ok">OK</a>
+                                                <a href="#" class="hide-if-no-js" id="role-cancel">Cancel</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div id="major-publishing-actions">
                                     <div id="delete-action">
-                                        <a class="submitdelete deletion" href="javascript:void(0);" title="Restore Default Setting for Current Role">Restore Role</a>
+                                        <a class="submitdelete deletion" href="#" title="Restore Default Setting for Current Role">Restore Role</a>
                                     </div>
                                     <div id="publishing-action">
                                         <img src="###site_url###/wp-admin/images/wpspin_light.gif" style="display:none;" id="ajax-loading" alt="Saving...">
-                                        <input name="save" id="save" class="button-primary" value="Save" tabindex="5" onclick="submitForm();" type="submit" />
+                                        <input name="save" id="save" class="button-primary" value="Save" tabindex="5" onclick="mObj.submitForm();" type="submit" />
                                     </div>
                                     <br class="clear" />
                                 </div>
@@ -195,7 +194,7 @@
                         <div class="inside" style="width:100%; margin: 0px; padding: 0px;">
                             <div id="role-tabs" >
                                 <ul>
-                                    <li><a href="#role_tab-1">List</a></li>
+                                    <li><a href="#role_tab-1">Role List</a></li>
                                     <li><a href="#role_tab-2">Add New</a></li>
                                 </ul>
                                 <div id="role_tab-1">
@@ -208,7 +207,7 @@
                                                 <td><i>(###count###)</i></td>
                                                 <td>
                                                     <!-- ###DELETE_ROLE_BUTTON### begin-->
-                                                    <a href="javascript:void(0);" onclick="deleteRole('###role_id###');" style="color:#FF0000;">Delete</a>
+                                                    <a href="javascript:void(0);" onclick="mObj.deleteRole('###role_id###');" style="color:#FF0000;">Delete</a>
                                                     <!-- ###DELETE_ROLE_BUTTON### end-->
                                                 </td>
                                             </tr>
@@ -221,9 +220,9 @@
                                     <!-- ###DELETE_ROLE_LIST### end-->
                                 </div>
                                 <div id="role_tab-2">
-                                    <div class="new-role-name-empty">Add New Role</div>
+                                    <div class="new-role-name-empty">Enter New Role</div>
                                     <input type="text" value="" id="new-role-name" />
-                                    <a href="javascript:void(0);" class="hide-if-no-js button" id="new-role-ok">Add</a>
+                                    <a href="#" class="hide-if-no-js button" id="new-role-ok">Add</a>
                                 </div>
                             </div>
                             <div id="new-role-message-ok">
