--- a/css/wpaccess_style.css
+++ b/css/wpaccess_style.css
@@ -10,6 +10,16 @@
     font-weight: bold;
 }
 
+.new-capability{
+    float:left;
+}
+
+.additional-panel{
+    width: 100%;
+    margin-top: 10px;
+    height: auto;
+}
+
 .plugin-logo{
     background: url('images/logo.png') no-repeat;
     float:left;
@@ -106,6 +116,10 @@
     font-size: 11px;
 }
 
+#capability-form input{
+    width: 85%;
+}
+
 .submenu-holder{
     padding: 2px 0 5px 3px;
 }
@@ -135,6 +149,18 @@
     color:#fff;
     z-index: 1000;
 }
+/*
+.tooltip {
+                display:none;
+                background-color:#ffa;
+                border:1px solid #cc9;
+                padding:3px;
+                font-size:13px;
+                -moz-box-shadow: 2px 2px 11px #666;
+                -webkit-box-shadow: 2px 2px 11px #666;
+        }
+
+*/
 
 .description-table{
     width: 100%;
@@ -195,6 +221,42 @@
 
 .default-roles{
     float:right;
+}
+
+.capability-name{
+    float:left;
+}
+
+.info{
+    float: left;
+}
+.capability-delete{
+    width: 10px;
+    height: 10px;
+    background: url(images/xit.gif) no-repeat;
+    margin-top:2px;
+    float: left;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+
+.capability-delete:hover{
+    background: url(images/xit.gif) no-repeat -10px 0;
+}
+
+.capability-description{
+    width: 10px;
+    height: 10px;
+    background: url(images/info.png) no-repeat;
+    margin-top:2px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+
+.capability-description:hover{
+    background: url(images/info.png) no-repeat -10px 0;
 }
 
 /* SEXY BOOKMARKS */
