--- a/css/wpaccess_style.css
+++ b/css/wpaccess_style.css
@@ -1,9 +1,23 @@
-#tabs{
-    visibility:hidden;
+#wp-access{
+    display:none;
+}
+
+#metabox-list{
+    margin-top: 20px;
 }
 
 #current-role-display{
     font-weight: bold;
+}
+
+.new-capability{
+    float:left;
+}
+
+.additional-panel{
+    width: 100%;
+    margin-top: 10px;
+    height: auto;
 }
 
 .plugin-logo{
@@ -41,9 +55,9 @@
 
 .initiate-url-empty{
     position:absolute;
-    margin: 9px 0 0 7px;
+    margin: 8px 0 0 7px;
     color: #9E9B9B;
-    font: 11px "Lucida Grande", Verdana, Arial, "Bitstream Vera Sans", sans-serif
+    font: 12px "Lucida Grande", Verdana, Arial, "Bitstream Vera Sans", sans-serif
 }
 
 .delete-role-table td{
@@ -102,6 +116,10 @@
     font-size: 11px;
 }
 
+#capability-form input{
+    width: 85%;
+}
+
 .submenu-holder{
     padding: 2px 0 5px 3px;
 }
@@ -131,6 +149,18 @@
     color:#fff;
     z-index: 1000;
 }
+/*
+.tooltip {
+                display:none;
+                background-color:#ffa;
+                border:1px solid #cc9;
+                padding:3px;
+                font-size:13px;
+                -moz-box-shadow: 2px 2px 11px #666;
+                -webkit-box-shadow: 2px 2px 11px #666;
+        }
+
+*/
 
 .description-table{
     width: 100%;
@@ -142,6 +172,10 @@
 
 .tooltip a{
     color: #ff853c;
+    font-weight: bold;
+}
+
+.info{
     font-weight: bold;
 }
 
@@ -164,6 +198,7 @@
 .metabox-item{
     width: 280px;
     float:left;
+    margin-left: 10px;
 }
 
 .metabox-description th{
@@ -174,10 +209,6 @@
 
 .metabox-description td{
     padding: 5px 0 0 15px;
-}
-.metabox-seperator{
-    width:20px;
-    float:left;
 }
 
 .initiate-url-text{
@@ -190,6 +221,42 @@
 
 .default-roles{
     float:right;
+}
+
+.capability-name{
+    float:left;
+}
+
+.info{
+    float: left;
+}
+.capability-delete{
+    width: 10px;
+    height: 10px;
+    background: url(images/xit.gif) no-repeat;
+    margin-top:2px;
+    float: left;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+
+.capability-delete:hover{
+    background: url(images/xit.gif) no-repeat -10px 0;
+}
+
+.capability-description{
+    width: 10px;
+    height: 10px;
+    background: url(images/info.png) no-repeat;
+    margin-top:2px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+
+.capability-description:hover{
+    background: url(images/info.png) no-repeat -10px 0;
 }
 
 /* SEXY BOOKMARKS */
