git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@425154 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/wpaccess_style.css
+++ b/css/wpaccess_style.css
@@ -314,6 +314,13 @@ div.sexy-bookmarks ul.socials a {
     background: url('images/twitter.png') no-repeat top;
 }
 
+.sexy-linkedin {
+    background: url('images/linkedin.png') no-repeat bottom;
+}
+.sexy-linkedin:hover {
+    background: url('images/linkedin.png') no-repeat top;
+}
+
 #emergency-curl{
     display : none;
 }
