--- a/templates/admin_options.html
+++ b/templates/admin_options.html
@@ -22,7 +22,6 @@
                     <div id="tabs">
                         <ul>
                             <li><a href="#tabs-1">Main Menu</a></li>
-
                             <li><a href="#tabs-2">Metaboxes & Widgets</a></li>
                             <li><a href="#tabs-3">Capabilities</a></li>
                         </ul>
@@ -259,6 +258,7 @@
                                     <li class="sexy-mail"><a href="mailto:admin@whimba.com" title="Send an Email">admin@whimba.com</a></li>
                                     <li class="sexy-facebook"><a href="http://www.facebook.com/pages/Whimba/113734005389430" target="_blank" title="Find on Facebook Page">Whimba.com</a></li>
                                     <li class="sexy-twitter"><a href="http://www.twitter.com/whimba" target="_blank" title="Follow on Twitter">Whimba</a></li>
+                                    <li class="sexy-linkedin"><a href="http://www.linkedin.com/pub/vasyl-martyniuk/26/654/930" target="_blank" title="LinkedIn">LinkedIn</a></li>
                                 </ul>
                             </div>
                             <br class="clear" />
