--- a/templates/admin_options.html
+++ b/templates/admin_options.html
@@ -2,13 +2,18 @@
     <form action="" method="post" id="wp-access">
         <div class="plugin-logo"></div>
         <div class="plugin-title"><h2>Advanced Access Manager</h2></div>
+        <div class="addons-info dialog">Additional features available</div>
         <br class="clear" />
+        <div class="message-passive" id="error-message">
+            <div class="ui-state-error ui-corner-all" style="padding: 0pt 0.7em;"> 
+                <p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: 0.3em;"></span> 
+                    <strong>Alert:</strong> You have a JavaScript Error on a page: "<span id="error-text"></span>". For support send an email to address <a href="mailto:whimba@gmail.com" title="Send an Email">whimba@gmail.com</a></p>
+            </div>
+        </div>
         <div class="###message_class###">
-            <div class="ui-widget">
-                <div class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;"> 
-                    <p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-                        <span style="color:#006505;">Options updated successfully!</span></p>
-                </div>
+            <div class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;"> 
+                <p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+                    <span style="color:#006505;">Options updated successfully!</span></p>
             </div>
         </div>
         <br class="clear" />
@@ -24,8 +29,15 @@
                             <li><a href="#tabs-1">Main Menu</a></li>
                             <li><a href="#tabs-2">Metaboxes & Widgets</a></li>
                             <li><a href="#tabs-3">Capabilities</a></li>
+                            <li><a href="#tabs-4">Posts & Pages</a></li>
                         </ul>
                         <div id="tabs-1">
+                            <div class="ui-state-highlight ui-corner-all dialog" id="sorting-tip" style="float:left; padding: 3px; margin-top: 2px;"> 
+                                <span class="ui-icon ui-icon-info" style="float: left; margin-right: 2px;"></span>
+                                <span style="color:#006505;">To Reorganize menu just Drag and Drop Items on the List and click Save Order</span>
+                            </div>
+                            <a href="#" id="reorganize" >Reorganize</a>
+                            <br class="clear" />
                             <!-- ###MAIN_MENU_LIST### begin-->
                             <div id="main-menu-options">
                                 <!-- ###MAIN_MENU_ITEM### begin-->
@@ -82,15 +94,15 @@
                                                     <tbody>
                                                         <tr>
                                                             <th>ID:</th>
-                                                            <td>###id###</td>
+                                                            <td><span class="metabox-id" title="###id###">###short_id###</span></td>
                                                         </tr>
                                                         <tr>
                                                             <th>Priority:</th>
-                                                            <td>###priority###</td>
+                                                            <td><span class="metabox-priority">###priority###</span></td>
                                                         </tr>
                                                         <tr>
                                                             <th>Position:</th>
-                                                            <td>###position###</td>
+                                                            <td><span class="metabox-position">###position###</span></td>
                                                         </tr>
                                                         <tr>
                                                             <th>Restrict:</th>
@@ -152,6 +164,106 @@
                                 <br class="clear" />
                             </div>
                         </div>
+                        <div id="tabs-4">
+                            <div class="tree-holder postbox">
+                                <div id="sidetreecontrol"><a href="#">Collapse All</a>&nbsp;|&nbsp;<a href="#">Expand All</a></div>
+                                <br class="clear" />
+                                <ul id="tree">
+                                </ul>
+                            </div>
+                            <div class="post-information postbox">
+                                <div class="message-passive" id="expire-error-message">
+                                    <div class="ui-state-error ui-corner-all" style="padding: 0pt 0.7em;"> 
+                                        <p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: 0.3em;"></span> 
+                                            <strong>Alert:</strong> Error during saving!</p>
+                                    </div>
+                                </div>
+                                <div class="message-passive" id="expire-success-message">
+                                    <div class="ui-state-highlight ui-corner-all" style="padding: 0 .7em;"> 
+                                        <p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+                                            <span style="color:#006505;">Options updated successfully!</span></p>
+                                    </div>
+                                </div>
+                                <div id="post-date">
+                                    <!-- ###POST_INFORMATION### begin-->
+                                    <!-- ###POST### begin-->
+                                    <table class="info-table" cellspacing="0" >
+                                        <tbody>
+                                            <tr>
+                                                <th>Title</th>
+                                                <td>###post_title###</td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="This is the title of selected Post or Page" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Type</th>
+                                                <td>###post_type###</td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Selected item's type" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Status</th>
+                                                <td>###post_status###</td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Current Post or Page Status" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Visibility</th>
+                                                <td>###post_visibility###</td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Visibility of current Post or Page" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Restrict</th>
+                                                <td><input type="checkbox" name="restrict_access" ###restrict_checked### value="1" /></td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Restrict access to current Post or Page" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Expire</th>
+                                                <td><input type="text" id="restrict_expire" value="###restrict_expire###" /></td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="If Restric is checked then restrict access to current Post or Page since the picked date. If Restrict is unchecked then allow access to Page or Post since the picked date" class="capability-description"></div></div></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <a href="#" class="button-primary save-postinfo">Update</a>
+                                    <!-- ###POST### end-->
+                                    <!-- ###CATEGORY### begin-->
+                                    <table class="info-table" cellspacing="0" >
+                                        <tbody>
+                                            <tr>
+                                                <th>Title</th>
+                                                <td>###name###</td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Category title" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Type</th>
+                                                <td>Category</td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="This is just a type of post's taxonomy. Always Category" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Posts</th>
+                                                <td>###post_number###</td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Number of posts current category has" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Restrict</th>
+                                                <td><input type="checkbox" name="restrict_access" ###restrict_checked### value="1" /></td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Restrict access to current category and for all Sub Categories. Also it'll restrict access to all posts under these categories" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Expire</th>
+                                                <td><input type="text" id="restrict_expire" value="###restrict_expire###" /></td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="If Restric is checked then restrict access to current Category and all Sub Categories, and Posts since the picked date. If Restrict is unchecked then allow access to current Category and all Sub Categories, and Posts since the picked date" class="capability-description"></div></div></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <a href="#" class="button-primary save-postinfo">Update</a>
+                                    <!-- ###CATEGORY### end-->
+                                    <!-- ###POST_INFORMATION### end-->
+                                    <div class="ui-state-highlight ui-corner-all" style="padding: 0 .7em;"> 
+                                        <p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+                                            <span>Select a proper Page, Post or Category.</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <br class="clear" />
+                        </div>
                     </div>
                     <!-- ###MAIN_OPTIONS_LIST### end-->
                 </div>
@@ -167,10 +279,10 @@
                             <div class="submitbox" id="submitpost">
                                 <div id="minor-publishing">
                                     <div id="misc-publishing-actions">
-                                        <div class="misc-role-section"><label for="current_role">Current Role:</label>
+                                        <div class="misc-role-section">
+                                            <label for="current_role">Current Role:</label>
                                             <span id="current-role-display">###current_role###</span>
                                             <a href="#" class="change-role hide-if-no-js" tabindex="4">Change</a>
-
                                             <div id="role-select" class="hide-if-js">
                                                 <select name="role" id="role" tabindex="4">
                                                     <!-- ###ROLE_LIST### begin-->
@@ -189,7 +301,7 @@
                                     </div>
                                     <div id="publishing-action">
                                         <img src="###site_url###/wp-admin/images/wpspin_light.gif" style="display:none;" id="ajax-loading" alt="Saving...">
-                                        <input name="save" id="save" class="button-primary" value="Save" tabindex="5" onclick="mObj.submitForm();" type="submit" />
+                                        <input name="save" id="save" class="button-primary" value="Save" tabindex="5" onclick="return mObj.submitForm();" type="submit" />
                                     </div>
                                     <br class="clear" />
                                 </div>
@@ -255,7 +367,7 @@
                         <div class="inside">
                             <div class="sexy-bookmarks">
                                 <ul class="socials">
-                                    <li class="sexy-mail"><a href="mailto:admin@whimba.com" title="Send an Email">admin@whimba.com</a></li>
+                                    <li class="sexy-mail"><a href="mailto:whimba@gmail.com" title="Send an Email">whimba@gmail.com</a></li>
                                     <li class="sexy-facebook"><a href="http://www.facebook.com/pages/Whimba/113734005389430" target="_blank" title="Find on Facebook Page">Whimba.com</a></li>
                                     <li class="sexy-twitter"><a href="http://www.twitter.com/whimba" target="_blank" title="Follow on Twitter">Whimba</a></li>
                                     <li class="sexy-linkedin"><a href="http://www.linkedin.com/pub/vasyl-martyniuk/26/654/930" target="_blank" title="LinkedIn">LinkedIn</a></li>
@@ -271,7 +383,10 @@
     <div id="dialog-delete-confirm" class="dialog" title="Delete Role?">
         <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span>Please confirm deleting Role - <b><span id="delete-role-title"></span></b></p>
     </div>
-     <div id="dialog-delete-capability" class="dialog" title="Delete Capability?">
+    <div id="dialog-reorder-confirm" class="dialog" title="Save Menu Order?">
+        <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span>Would you like to save Menu Order <b>ONLY</b> for Role - <b><span id="role-title"></span></b></p>
+    </div>
+    <div id="dialog-delete-capability" class="dialog" title="Delete Capability?">
         <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span>Please confirm deleting Capability - <b><span id="delete-capability-title"></span></b></p>
     </div>
     <div id="dialog-confirm" class="dialog" title="Restore Default Role Settings?">
@@ -282,5 +397,11 @@
     </div>
     <div id="capability-form" class="dialog" title="Add New Capability">
         <input type="text" value="" id="new-cap" name="new-cap" />
+    </div>
+    <div id="addons-notice" class="dialog" title="Additional Features Available">
+        <p>Additional features detected to extend Advanced Access Manager functionality. <a href="http://whimba.com/plugins/advanced-access-manager/add-ons/" target="_blank">Read More...</a></p>
+    </div>
+    <div id="addon-proposal" class="dialog" title="Upgrade functionality">
+        <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span><span id="addon-message"></span></p>
     </div>
 </div>
