git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@434398 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templates/admin_options.html
+++ b/templates/admin_options.html
@@ -36,7 +36,7 @@
                                 <span class="ui-icon ui-icon-info" style="float: left; margin-right: 2px;"></span>
                                 <span style="color:#006505;">To Reorganize menu just Drag and Drop Items on the List and click Save Order</span>
                             </div>
-                            <a href="#" id="reorganize" >Reorganize</a>
+                            <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" id="reorganize"><span class="ui-button-text">Reorganize</span></a>
                             <br class="clear" />
                             <!-- ###MAIN_MENU_LIST### begin-->
                             <div id="main-menu-options">
@@ -144,22 +144,21 @@
                                 <!-- ###CAPABILITY_DELETE### begin-->
                                 <div class="capability-delete" onclick="mObj.deleteCapability('###title###', '###cap_name###');" title="Delete Capability"></div>
                                 <!-- ###CAPABILITY_DELETE### end-->
-                                <br class="clear" />
                             </div>
                             <!-- ###CAPABILITY_ITEM### end-->
                             <br class="clear" />
                             <!-- ###CAPABILITY_LIST### end-->
                             <div class="additional-panel">
                                 <div class="new-capability">
-                                    <a href="#" id="new-capability" title="Add New Capability">Add New Cap</a>
+                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-primary ui-state-focus" href="#" id="new-capability" title="Add New Capability"><span class="ui-button-icon-primary ui-icon ui-icon-plus"></span><span class="ui-button-text">Add New</span></a>
                                 </div>
                                 <div class="default-roles">
-                                    <input type="radio" id="radio1" name="radio" onclick="mObj.changeCapabilities('radio1');" /><label for="radio1" title="Give Administrator's List of Capabilities">Administrator</label>
-                                    <input type="radio" id="radio2" name="radio" onclick="mObj.changeCapabilities('radio2');" /><label for="radio2" title="Give Editor's List of Capabilities">Editor</label>
-                                    <input type="radio" id="radio3" name="radio" onclick="mObj.changeCapabilities('radio3');" /><label for="radio3" title="Give Author's List of Capabilities">Author</label>
-                                    <input type="radio" id="radio4" name="radio" onclick="mObj.changeCapabilities('radio4');" /><label for="radio4" title="Give Contributor's List of Capabilities">Contributor</label>
-                                    <input type="radio" id="radio5" name="radio" onclick="mObj.changeCapabilities('radio5');" /><label for="radio5" title="Give Subscriber's List of Capabilities">Subscriber</label>
-                                    <input type="radio" id="radio6" name="radio" onclick="mObj.changeCapabilities('radio6');" /><label for="radio6" title="Clear all Capabilities">Clear All</label>
+                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Administrator's List of Capabilities" id="radio1"><span class="ui-button-text">Administrator</span></a>
+                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Editor's List of Capabilities" id="radio2"><span class="ui-button-text">Editor</span></a>
+                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Author's List of Capabilities" id="radio3"><span class="ui-button-text">Author</span></a>
+                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Contributor's List of Capabilities" id="radio4"><span class="ui-button-text">Contributor</span></a>
+                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Subscriber's List of Capabilities" id="radio5"><span class="ui-button-text">Subscriber</span></a>
+                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Clear all Capabilities" id="radio6"><span class="ui-button-text">Clear All</span></a>
                                 </div>
                                 <br class="clear" />
                             </div>
