--- a/templates/admin_options.html
+++ b/templates/admin_options.html
@@ -1,5 +1,5 @@
-<div class="wrap">
-    <form action="" method="post" id="wp-access">
+<div class="wrap" id="aam_wrap">
+    <form action="###form_action###" method="post" id="wp-access">
         <div class="plugin-logo"></div>
         <div class="plugin-title"><h2>Advanced Access Manager</h2></div>
         <div class="addons-info dialog">Additional features available</div>
@@ -36,7 +36,7 @@
                                 <span class="ui-icon ui-icon-info" style="float: left; margin-right: 2px;"></span>
                                 <span style="color:#006505;">To Reorganize menu just Drag and Drop Items on the List and click Save Order</span>
                             </div>
-                            <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" id="reorganize"><span class="ui-button-text">Reorganize</span></a>
+                            <a href="#" class="button" id="reorganize">Reorganize</a>
                             <br class="clear" />
                             <!-- ###MAIN_MENU_LIST### begin-->
                             <div id="main-menu-options">
@@ -150,15 +150,15 @@
                             <!-- ###CAPABILITY_LIST### end-->
                             <div class="additional-panel">
                                 <div class="new-capability">
-                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-primary ui-state-focus" href="#" id="new-capability" title="Add New Capability"><span class="ui-button-icon-primary ui-icon ui-icon-plus"></span><span class="ui-button-text">Add New</span></a>
+                                    <a href="#" class="button" id="new-capability" title="Add New Capability">Add New Cap</a>
                                 </div>
                                 <div class="default-roles">
-                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Administrator's List of Capabilities" id="radio1"><span class="ui-button-text">Administrator</span></a>
-                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Editor's List of Capabilities" id="radio2"><span class="ui-button-text">Editor</span></a>
-                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Author's List of Capabilities" id="radio3"><span class="ui-button-text">Author</span></a>
-                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Contributor's List of Capabilities" id="radio4"><span class="ui-button-text">Contributor</span></a>
-                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Give Subscriber's List of Capabilities" id="radio5"><span class="ui-button-text">Subscriber</span></a>
-                                    <a role="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-focus" href="#" title="Clear all Capabilities" id="radio6"><span class="ui-button-text">Clear All</span></a>
+                                    <a href="#" class="button" title="Give Administrator's List of Capabilities" id="radio1">Administrator</a>
+                                    <a href="#" class="button" title="Give Editor's List of Capabilities" id="radio2">Editor</a>
+                                    <a href="#" class="button" title="Give Author's List of Capabilities" id="radio3">Author</a>
+                                    <a href="#" class="button" title="Give Contributor's List of Capabilities" id="radio4">Contributor</a>
+                                    <a href="#" class="button" title="Give Subscriber's List of Capabilities" id="radio5">Subscriber</a>
+                                    <a href="#" class="button" title="Clear all Capabilities" id="radio6">Clear All</a>
                                 </div>
                                 <br class="clear" />
                             </div>
@@ -209,14 +209,19 @@
                                                 <td><div class="info" title="Click for Tooltip"><div title="Visibility of current Post or Page" class="capability-description"></div></div></td>
                                             </tr>
                                             <tr>
-                                                <th>Restrict</th>
+                                                <th>Restrict Back</th>
                                                 <td><input type="checkbox" name="restrict_access" ###restrict_checked### value="1" /></td>
-                                                <td><div class="info" title="Click for Tooltip"><div title="Restrict access to current Post or Page" class="capability-description"></div></div></td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Restrict access to current Post or Page on BackEnd" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Restrict Front</th>
+                                                <td><input type="checkbox" name="restrict_front_access" ###restrict_front_checked### value="1" /></td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Restrict access to current Post or Page on FrontEnd" class="capability-description"></div></div></td>
                                             </tr>
                                             <tr>
                                                 <th>Expire</th>
                                                 <td><input type="text" id="restrict_expire" value="###restrict_expire###" /></td>
-                                                <td><div class="info" title="Click for Tooltip"><div title="If Restric is checked then restrict access to current Post or Page since the picked date. If Restrict is unchecked then allow access to Page or Post since the picked date" class="capability-description"></div></div></td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="If Restric is checked then restrict access to current Post or Page until the picked date. If Restrict is unchecked then allow access to Page or Post until the picked date" class="capability-description"></div></div></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -241,9 +246,14 @@
                                                 <td><div class="info" title="Click for Tooltip"><div title="Number of posts current category has" class="capability-description"></div></div></td>
                                             </tr>
                                             <tr>
-                                                <th>Restrict</th>
+                                                <th>Restrict Admin</th>
                                                 <td><input type="checkbox" name="restrict_access" ###restrict_checked### value="1" /></td>
-                                                <td><div class="info" title="Click for Tooltip"><div title="Restrict access to current category and for all Sub Categories. Also it'll restrict access to all posts under these categories" class="capability-description"></div></div></td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Restrict access to current category and for all Sub Categories on BackEnd. Also it'll restrict access to all posts under these categories" class="capability-description"></div></div></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Restrict Front</th>
+                                                <td><input type="checkbox" name="restrict_front_access" ###restrict_front_checked### value="1" /></td>
+                                                <td><div class="info" title="Click for Tooltip"><div title="Restrict access to current category and for all Sub Categories on FrontEnd. Also it'll restrict access to all posts under these categories" class="capability-description"></div></div></td>
                                             </tr>
                                             <tr>
                                                 <th>Expire</th>
@@ -275,6 +285,7 @@
                         <div class="handlediv" title="Click to toggle"><br /></div>
                         <h3 class="hndle"><span>General</span></h3>
                         <div class="inside">
+                            <br class="clear" />
                             <div class="submitbox" id="submitpost">
                                 <div id="minor-publishing">
                                     <div id="misc-publishing-actions">
@@ -295,10 +306,12 @@
                                     </div>
                                 </div>
                                 <div id="major-publishing-actions">
-                                    <div id="delete-action">
-                                        <a class="submitdelete deletion" href="#" title="Restore Default Setting for Current Role">Restore Role</a>
+                                    <div class="additional-actions">
+                                        <div class="restore-conf" title="Restore Default Setting for Current Role"></div>
+                                        <div class="export-conf" title="Export Configurations"></div>
+                                        <div class="import-conf" title="Import Configurations"></div>
                                     </div>
-                                    <div id="publishing-action">
+                                    <div class="save-action">
                                         <img src="###site_url###/wp-admin/images/wpspin_light.gif" style="display:none;" id="ajax-loading" alt="Saving...">
                                         <input name="save" id="save" class="button-primary" value="Save" tabindex="5" onclick="return mObj.submitForm();" type="submit" />
                                     </div>
@@ -307,7 +320,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="metabox-wpaccess-support" class="postbox" >
+                    <div id="metabox-wpaccess-rolemanager" class="postbox" >
                         <div class="handlediv" title="Click to toggle"><br /></div>
                         <h3 class="hndle"><span>Role Manager</span></h3>
                         <div class="inside" style="width:100%; margin: 0px; padding: 0px;">
@@ -359,7 +372,6 @@
                             </div>
                         </div>
                     </div>
-                    ###metabox_general_info###
                     <div id="metabox-support" class="postbox">
                         <div class="handlediv" title="Click to toggle"><br /></div>
                         <h3 class="hndle"><span>Support</span></h3>
@@ -403,4 +415,21 @@
     <div id="addon-proposal" class="dialog" title="Upgrade functionality">
         <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span><span id="addon-message"></span></p>
     </div>
+    <div id="import-config" class="dialog" title="Import Configurations">
+        <div class="importer-container">
+            <div class="import-form">
+                <span class="notice-highlight">WARNING! </span>After importing, ALL current configurations will be lost. If you are sure, please select proper INI file and click on <i>Import</i> button.<br/>
+                <input id="fileupload" type="file" name="config_file" />
+                <input type="hidden" id="config_file_name" />
+                <div class="facebook-loading">Uploading...</div>
+            </div>
+            <div class="import-steps">
+                <div class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;"> 
+                    <p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+                        <span style="color:#006505;">Please wait. Importer is working...</span></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <iframe id="exportIFrame" src="" style="display:none;" ></iframe>
 </div>
